# waternlights

./: .flaskenv  .gitignore  Makefile  README.md  config.py  pyproject.toml  settings.toml
app/: __init__.py  config.py  hooks.py  models.py  wsgi.py
app/admin/: __init__.py  auth.py  models.py  utils.py
app/controllers/: __init__.py  auth.py
app/database/: __init__.py  models.py
app/ext/: hooks.py
app/ext/admin/: __init__.py  models.py
app/ext/site/: __init__.py  views.py
app/site/ilustrations/: __init__.py  views.py
app/site/pages/: __init__.py  views.py
app/site/publications/: __init__.py  views.py
giselaortt/: app.py  wsgi.py
giselaortt/blueprints/webui/: __init__.py  views.py
giselaortt/blueprints/webui/templates/: blog.html  index.html  store.html
giselaortt/blueprints/webui/templates/components/: forms.html  navbar.html
giselaortt/blueprints/webui/templates/layouts/: base.html
giselaortt/tests/unit/: test_app.py
resources/templates/: base.html
resources/templates/ilustrations/: detail.html  list.html
resources/templates/pages/: about.html  contact.html  index.html
resources/templates/publications/: list.html
tests/: conftest.py
waternlights/: app.py
waternlights/blueprints/webui/: views.py
waternlights/blueprints/webui/templates/: about.html  login.html
waternlights/blueprints/webui/templates/components/: notifications.html
waternlights/tests/: conftest.py
waternlights/tests/unit/: test_app.py
