[tool.poetry]
name = "waternlights"
version = "0.1.0"
description = "Site para a venda de desenhos e publicações de um blog"
authors = ["Igor Taconi <igortaconi1@gmail.com>"]
license = "GPL-3-0-only"
readme = "README.md"
homepage = "https://giselaortt.herokuapp.com/"
repository = "https://github.com/igor-taconi/waternlights"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Natural Language :: Portuguese (Brazilian)",
  "Operating System :: OS Independent",
  "Programming Language :: Python 3",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Page Counters",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
  { include = "waternlights" }
]
include = [
  "README.md",
  "waternlights/webui/templastes/*.html",
  "waternlights/webui/static/*.css"
]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"
dynaconf = "^3.1.4"
python-dotenv = "^0.15.0"
gunicorn = "^20.0.4"
gevent = "^21.1.2"
peewee = "^3.14.4"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.6"
pytest-flask = "^1.2.0"
Flask-DebugToolbar = "^0.11.0"
isort = "^5.7.0"
black = "^20.8b1"
flake8 = "^3.8.4"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
